--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,9 +139,9 @@ button {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 10px auto 0;
     cursor: pointer;
     border-radius: 4px;
     transition: 0.3s;
